# nonocross

./: README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/levels/: 0  1  3  4  7  Easy 1  Easy 2  Easy 3  Easy 4  Level 1  Level 2  Level 3  Level 4  Level 5
app/src/main/cpp/: CMakeLists.txt  jsolve.c
app/src/main/res/color/: icon_tint_selector_cross.xml  icon_tint_selector_primary.xml  icon_tint_selector_shade.xml
app/src/main/res/drawable/: ic_baseline_add_32.xml  ic_baseline_content_copy_32.xml  ic_baseline_delete_32.xml  ic_baseline_grid_on_32.xml  ic_baseline_info_32.xml  ic_baseline_qr_code_32.xml  ic_baseline_redo_32.xml  ic_baseline_refresh_32.xml  ic_baseline_save_32.xml  ic_baseline_undo_32.xml  ic_baseline_zoom_out_map_32.xml  ic_cross.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_square.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_game.xml  activity_level_select.xml  activity_main.xml  dialogue_online_grid.xml  dialogue_random_grid.xml  edit_text_layout.xml  level_view.xml  seed_view.xml
app/src/main/res/menu/: add_level_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml  styles.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-night/: colors.xml  styles.xml  themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/xml/: root_preferences.xml
fastlane/metadata/android/de/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/it/: full_description.txt  short_description.txt  title.txt
gradle/wrapper/: gradle-wrapper.properties
(+64 files in other folders)
